# serializer version: 1
# name: TestGetOTUByID.test_ok[otu]
  dict({
    'abbreviation': '',
    'exclusions': list([
    ]),
    'id': '3962f6ec',
    'isolates': list([
      dict({
        'default': True,
        'id': 'dbf54ede',
        'sequences': list([
        ]),
        'source_name': 'Mexico',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Jacquemontia mosaic Yucatan virus',
    'schema': list([
      dict({
        'molecule': 'ssDNA',
        'name': 'DNA A',
        'required': True,
      }),
      dict({
        'molecule': 'ssDNA',
        'name': 'DNA B',
        'required': True,
      }),
    ]),
    'taxid': 1198450,
  })
# ---
# name: TestGetOTUByTaxid.test_ok[otu]
  dict({
    'abbreviation': 'DLVd',
    'exclusions': list([
    ]),
    'id': 'ab6bd88a',
    'isolates': list([
      dict({
        'default': True,
        'id': 'fwth8bdi',
        'sequences': list([
        ]),
        'source_name': '4706174',
        'source_type': 'isolate',
      }),
    ]),
    'name': 'Dahlia latent viroid',
    'schema': list([
      dict({
        'molecule': 'ssRNA+',
        'name': 'Viroid',
        'required': True,
      }),
    ]),
    'taxid': 1278205,
  })
# ---
# name: test_create_otu[otu]
  dict({
    'abbreviation': '',
    'exclusions': list([
    ]),
    'isolates': list([
    ]),
    'name': '',
    'schema': list([
    ]),
    'taxid': -1,
  })
# ---
# name: test_init[otu_id_to_path]
  dict({
    '0bfdb8bc': 'wasabi_mottle_virus--0bfdb8bc',
    '3962f6ec': 'jacquemontia_mosaic_yucatan_virus--3962f6ec',
    '407d8a21': 'kalanchoe_latent_virus--407d8a21',
    '4c9ddfb7': 'lagenaria_siceraria_endornavirus_california--4c9ddfb7',
    '5aa4a083': 'east_african_cassava_mosaic_cameroon_virus--5aa4a083',
    '5d877144': 'yacon_necrotic_mottle_virus--5d877144',
    '6444acf3': 'faba_bean_necrotic_stunt_alphasatellite_1--6444acf3',
    '6bc81904': 'saccharum_streak_virus--6bc81904',
    '71d15b86': 'ugandan_cassava_brown_streak_virus--71d15b86',
    '9da7c10d': 'radish_leaf_curl_betasatellite--9da7c10d',
    'a89b6529': 'habenaria_mosaic_virus--a89b6529',
    'ab6bd88a': 'dahlia_latent_viroid--ab6bd88a',
    'ae0f2a35': 'nanovirus_like_particle--ae0f2a35',
    'c93ec9a9': 'abaca_bunchy_top_virus--c93ec9a9',
    'd226290f': 'cabbage_leaf_curl_jamaica_virus--d226290f',
    'd86d0412': 'tall_oatgrass_mosaic_virus--d86d0412',
    'dd21fd8f': 'pagoda_yellow_mosaic_associated_virus--dd21fd8f',
    'e1dfb3ef': 'oat_blue_dwarf_virus--e1dfb3ef',
    'e5b6dd57': 'zantedeschia_mild_mosaic_virus--e5b6dd57',
    'e7wkndjc': 'impatiens_flower_break_potyvirus--e7wkndjc',
    'f8a56910': 'gaillardia_latent_virus--f8a56910',
    'g7qy3n72': 'maclura_mosaic_virus--g7qy3n72',
    'v7r8gxav': 'vallota_mosaic_virus--v7r8gxav',
    'xcl20vqt': 'babaco_mosaic_virus--xcl20vqt',
  })
# ---
# name: test_init[sequence_id_to_otu_id]
  dict({
    '0owj7oas': 'c93ec9a9',
    '0s9kczxs': 'f8a56910',
    '27ficy1s': 'dd21fd8f',
    '5ms4tpsb': 'd86d0412',
    '5w3oz9pl': 'c93ec9a9',
    '6yy1d2ev': '5aa4a083',
    'atfrq1dt': 'a89b6529',
    'buvquaqv': 'e5b6dd57',
    'clt0zobl': '0bfdb8bc',
    'cpm1g5h4': 'c93ec9a9',
    'd9bbetey': '0bfdb8bc',
    'e5lz6r5m': '6bc81904',
    'emrw6o2d': 'd226290f',
    'fgdkm0kp': 'c93ec9a9',
    'fl6r8ylz': 'c93ec9a9',
    'ggx1bvx6': 'e1dfb3ef',
    'gxansv52': '0bfdb8bc',
    'heprpw4w': 'c93ec9a9',
    'ib2dn2kt': 'xcl20vqt',
    'iz8ant3f': 'c93ec9a9',
    'j0g7sfp4': 'c93ec9a9',
    'jj1jtoj0': '9da7c10d',
    'jowusser': '5d877144',
    'm7y38816': '0bfdb8bc',
    'ndaxyl7f': 'd226290f',
    'ngn9uhrp': '5aa4a083',
    'ondpjl1h': '0bfdb8bc',
    'pqm6etvy': 'c93ec9a9',
    'pvx374vw': 'v7r8gxav',
    'pyb0vqd8': 'd226290f',
    'pyf9x4wh': 'd226290f',
    'qrhnfccf': '6444acf3',
    's86vn1ie': '3962f6ec',
    't2ppu39d': 'c93ec9a9',
    'ti04jjqb': 'e7wkndjc',
    'tw0nwtro': '4c9ddfb7',
    'usvsrzjk': '407d8a21',
    'v97n3owu': 'g7qy3n72',
    'vza1fxor': 'c93ec9a9',
    'wuf8wjhh': '3962f6ec',
    'wv62fdpe': '71d15b86',
    'wzpj56v7': 'c93ec9a9',
    'x1ktdmdu': 'ab6bd88a',
    'yf43abg4': 'ae0f2a35',
  })
# ---
# name: test_init[sequence_id_to_path]
  dict({
    '0owj7oas': '0owj7oas.json',
    '0s9kczxs': '0s9kczxs.json',
    '27ficy1s': '27ficy1s.json',
    '5ms4tpsb': '5ms4tpsb.json',
    '5w3oz9pl': '5w3oz9pl.json',
    '6yy1d2ev': '6yy1d2ev.json',
    'atfrq1dt': 'atfrq1dt.json',
    'buvquaqv': 'buvquaqv.json',
    'clt0zobl': 'clt0zobl.json',
    'cpm1g5h4': 'cpm1g5h4.json',
    'd9bbetey': 'd9bbetey.json',
    'e5lz6r5m': 'e5lz6r5m.json',
    'emrw6o2d': 'emrw6o2d.json',
    'fgdkm0kp': 'fgdkm0kp.json',
    'fl6r8ylz': 'fl6r8ylz.json',
    'ggx1bvx6': 'ggx1bvx6.json',
    'gxansv52': 'gxansv52.json',
    'heprpw4w': 'heprpw4w.json',
    'ib2dn2kt': 'ib2dn2kt.json',
    'iz8ant3f': 'iz8ant3f.json',
    'j0g7sfp4': 'j0g7sfp4.json',
    'jj1jtoj0': 'jj1jtoj0.json',
    'jowusser': 'jowusser.json',
    'm7y38816': 'm7y38816.json',
    'ndaxyl7f': 'ndaxyl7f.json',
    'ngn9uhrp': 'ngn9uhrp.json',
    'ondpjl1h': 'ondpjl1h.json',
    'pqm6etvy': 'pqm6etvy.json',
    'pvx374vw': 'pvx374vw.json',
    'pyb0vqd8': 'pyb0vqd8.json',
    'pyf9x4wh': 'pyf9x4wh.json',
    'qrhnfccf': 'qrhnfccf.json',
    's86vn1ie': 's86vn1ie.json',
    't2ppu39d': 't2ppu39d.json',
    'ti04jjqb': 'ti04jjqb.json',
    'tw0nwtro': 'tw0nwtro.json',
    'usvsrzjk': 'usvsrzjk.json',
    'v97n3owu': 'v97n3owu.json',
    'vza1fxor': 'vza1fxor.json',
    'wuf8wjhh': 'wuf8wjhh.json',
    'wv62fdpe': 'wv62fdpe.json',
    'wzpj56v7': 'wzpj56v7.json',
    'x1ktdmdu': 'x1ktdmdu.json',
    'yf43abg4': 'yf43abg4.json',
  })
# ---
# name: test_init[taxid_to_otu_id]
  dict({
    48201: 'g7qy3n72',
    56879: 'e1dfb3ef',
    96892: 'ae0f2a35',
    132477: '407d8a21',
    223262: '5aa4a083',
    270478: 'e5b6dd57',
    345184: 'd226290f',
    430059: 'v7r8gxav',
    438782: 'c93ec9a9',
    662596: '9da7c10d',
    683179: '6bc81904',
    946046: '71d15b86',
    1169032: '0bfdb8bc',
    1198450: '3962f6ec',
    1278205: 'ab6bd88a',
    1324128: 'a89b6529',
    1414644: 'd86d0412',
    1441799: '6444acf3',
    1468172: 'f8a56910',
    1468454: '4c9ddfb7',
    1505530: 'dd21fd8f',
    1561150: '5d877144',
    2060511: 'xcl20vqt',
    2170135: 'e7wkndjc',
  })
# ---
